fixed the invisible menu icon

--- a/_sass/_01_settings_colors_light.scss
+++ b/_sass/_01_settings_colors_light.scss
@@ -98,8 +98,8 @@ $topbar-dropdown-link-bg: $ci-2;
 
 $topbar-menu-link-color-toggled: $ci-1;
 $topbar-menu-icon-color-toggled: $ci-1;
-$topbar-menu-link-color: #E4E4E4;
-$topbar-menu-icon-color: #E4E4E4;
+$topbar-menu-link-color: $ci-1;
+$topbar-menu-icon-color: $ci-1;
 $topbar-menu-link-color-toggled: $ci-6;
 $topbar-menu-icon-color-toggled: $ci-6;
 
